Fixed an issue on firefox / safari

--- a/app/scss/_base.scss
+++ b/app/scss/_base.scss
@@ -1,16 +1,13 @@
-.account-menu{position: relative; display: inline-block; cursor:pointer;
-  img.profile{width:36px; height:36px; border-radius: 50%; }
-  .circ-arrow{width:13px; height:13px; border-radius: 50%; background: white; position: absolute; right:-3px; bottom:-1px; pointer-events: none; box-shadow:0 0px 3px 2px rgba(black, 0.1); z-index: 20;
-    &:after  {content:""; width: 0; height: 0; border-style: solid; border-width: 6px 4px 0 4px; border-color: #007bff transparent transparent transparent; position: absolute; top:4px; left:3px; }
+.account-menu          {position: relative; display: inline-block; cursor:pointer;
+  .profile             {position: relative;
+    img                {width:36px; height:36px; border-radius: 50%; }
+    .letter            {position: absolute; width:25px; text-align: center; color:white; z-index: 2; font-size:17px; text-transform:uppercase; width:25px; height:25px; background: rgba(red, 0.7); border-radius: 50%; padding-top:3px; top:0; }
   }
-  .letter     {position: absolute; width:25px; text-align: center; color:white; z-index: 2; font-size:17px; text-transform:uppercase; width:25px; height:25px; background: rgba(red, 0.7); border-radius: 50%; padding-top:3px}
-  #profile-img {position: relative; display: flex;}
+  .circ-arrow          {width:13px; height:13px; border-radius: 50%; background: white; position: absolute; right:-3px; bottom:-1px; pointer-events: none; box-shadow:0 0px 3px 2px rgba(black, 0.1); z-index: 20;
+    &:after            {content:""; width: 0; height: 0; border-style: solid; border-width: 6px 4px 0 4px; border-color: #007bff transparent transparent transparent; position: absolute; top:4px; left:3px; }
+  }
   .image-box .letter,
-  #profile-img .letter{width:38px; height:38px; top:-1px; left:-1px; padding-top: 6px; font-size:22px; }
-  .image-box{position: relative;
-    .letter {top:10px; left:10px;  }
-  }
-
+  #profile-img .letter {width:38px; height:38px; top:-1px; left:-1px; padding-top: 6px; font-size:22px; }
   @import "drop-down";
   @import "sub-menu";
 }
